# hydra-vertex-ai-pipeline

./: LICENSE  Makefile  README.md  pipeline.py  pyproject.toml  submit_pipeline_job.py
components/data_prepare/: .dockerignore  Dockerfile  config.yaml  docker-compose.yaml  main.py  pyproject.toml
components/data_prepare/functions/: __init__.py
configs/: pipeline.yaml
configs/components/: data_prepare.yaml  train.yaml
documents/: README_ja.md
