[tool.poetry]
name = "data_prepare"
version = "0.1.0"
description = ""
authors = ["Yongtae <y.hwang@jxpress.net>"]

[tool.poetry.dependencies]
python = "^3.8"
torchvision = "^0.13.1"
Hydra = "^2.5"
hydra-core = "^1.2.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
